@@ -6,7 +6,7 @@ Version: 1.7.1
 Author: Laurent Gatto, Nick J. Bond, Pavel V. Shliaha and 
 	Sebastian Gibb.
 Maintainer: Laurent Gatto <lg390@cam.ac.uk>
-Depends: R (>= 2.15), methods, MSnbase (>= 1.13.1)
+Depends: R (>= 3.1.0), methods, MSnbase (>= 1.13.1)
 Imports: hwriter, tcltk, tcltk2, RColorBrewer, lattice, qvalue,
         multtest, utils, Biobase, knitr, Biostrings, cleaver (>= 1.3.3),
         BiocParallel
